[package]
name = "pinreq"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.6.0"
base58 = "0.1.0"
base64 = "0.12.1"
clap = "2.33.1"
env_logger = "0.7.1"
failure = "0.1.8"
gpgme = "0.9.2"
hyper = "0.13.5"
hyper-tls = "0.4.1"
ipfs-api= "0.7.2"
log = "0.4.8"
rpassword = "4.0.5"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
tokio = "0.2.21"
toml = "0.5.6"
url = "2.1.1"
futures = "0.3.5"
