[package]
name = "pinreq"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.1"
env_logger = "0.7.1"
failure = "0.1.8"
futures = "0.3.5"
gpgme = "0.9.2"
ipfs-api= "0.7.2"
log = "0.4.8"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
tokio = {version = "0.2.21", features = ["macros"]}
toml = "0.5.6"
